corrected a bit of stying
TODO:
- Reordering of the linklist.
- Saving everything.
- More / All languages.
- Activating / Deactivating linklist items.
- Share Sheet and QR-Code generator.
- Making the styling more attractive.
- Give the Repeat Items correct keys. This currently results in seemingly ever just deleting the last item.
- Back to the start-page link.

--- a/src/index.css
+++ b/src/index.css
@@ -196,14 +196,8 @@ button:focus.choosen:after {
     box-shadow: 0 0 0 var(--basis_x0_2) var(--on-background-contrast);
 }
 
-.buttonRow{
-  margin-top: var(--basis);
-}
 .buttonRow button{
-  margin: 0 var(--basis_x0_5);
-}
-.buttonRow button:first-of-type{
-  margin-left: 0;
+  margin: var(--basis) var(--basis) 0 0;
 }
 .buttonRow button:laft-of-type{
   margin-right: 0;
