--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ select{
 textarea,
 input[type="text"]{
   padding: var(--basis);
-  background: var(--background-contrast);
+  background: var(--background);
   color: var(--on-background);
   box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background);
 }
@@ -123,7 +123,7 @@ input[type="text"].inverted{
 
 textarea:focus,
 input[type="text"]:focus{
-  background: var(--background-contrast);
+  background: var(--background);
   color: var(--on-background);
   box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background-contrast);
 }
