prevent the user from interacting while the content is loading

--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -1,3 +1,11 @@
+.editor {
+  transition: opacity .2s ease;
+}
+.editor.loadingContent {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .editor .item {
   background: var(--background-contrast);
   color: var(--on-background);
