--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 :root {
   --white: #fff;
+  --white-rgb: 255, 255, 255;
   --grey: #ede8f1;
+  --grey-rgb: 237, 232, 241;
   --dark-grey: #aa94c0;
+  --dark-grey-rgb: 170, 148, 192;
 
   --purple: #502379;
+  --purple-rgb: 80, 35, 121;
   --purple-dark: #140022;
+  --purple-dark-rgb: 20, 0, 34;
+
+  --alpha-more: 0.8;
+  --alpha-less: 0.12;
+
+  --blur: 20px;
 
   --yellow: #FDC220;
   --on-yellow: #fff;
@@ -38,14 +48,18 @@
 
 html{
   --background: var(--grey);
+  --background-rgb: var(--grey-rgb);
   --background-contrast: var(--white);
+  --background-contrast-rgb: var(--white-rgb);
   --on-background: var(--purple);
   --on-background-contrast: var(--purple-dark);
 }
 @media (prefers-color-scheme: dark) {
   html{
     --background: var(--purple-dark);
+    --background-rgb: var(--purple-dark-rgb);
     --background-contrast: var(--purple);
+    --background-contrast-rgb: var(--purple-rgb);
     --on-background: var(--white);
     --on-background-contrast: var(--dark-grey);
   }
@@ -70,16 +84,6 @@ a:hover{
 footer {
   padding: var(--basis_x4);
   text-align: center;
-}
-header {
-  padding: var(--basis_x2);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header h2,
-header button{
-  margin: 0;
 }
 
 h1{
