--- a/src/components/Repeater.module.css
+++ b/src/components/Repeater.module.css
@@ -15,9 +15,14 @@
 .row .inlineRowButton{
   flex-shrink: 0;
   margin-top: 0;
-  margin-right: 0;
   margin-bottom: 0;
   text-align: center;
+}
+.row .inlineRowButton:first-child {
+  margin-left: 0;
+}
+.row .inlineRowButton:last-child {
+  margin-right: 0;
 }
 
 .addRowButton{
