inherit text decoration from links

--- a/src/index.css
+++ b/src/index.css
@@ -122,21 +122,25 @@ h1 {
   line-height: 0.9;
   /* margin: 0 0 var(--basis) 0; */
   margin: var(--basis_x4) 0 var(--basis) 0;
+  text-decoration: inherit;
 }
 
 h2 {
   font-size: calc(var(--font-add) + var(--basis_x2));
   margin: var(--basis_x4) 0 var(--basis) 0;
+  text-decoration: inherit;
 }
 
 h3 {
   font-size: calc(var(--font-add) + var(--basis));
   margin: var(--basis_x2) 0 var(--basis) 0;
+  text-decoration: inherit;
 }
 
 p {
   /* width: calc(var(--basis_x16) + var(--basis_x8)); */
   max-width: 100%;
+  text-decoration: inherit;
 }
 
 ul {
