gave paragraphs a bit of margin at the top and bottom

--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ h3 {
 p {
   /* width: calc(var(--basis_x16) + var(--basis_x8)); */
   max-width: 100%;
+  margin: var(--basis) 0;
   text-decoration: inherit;
 }
 
