added white bg to some code tags

--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,13 @@ body {
 code {
   font-family: 'Ubuntu Mono', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+code.filled{
+  padding: var(--basis_x0_2);
+  margin: 0 var(--basis_x0_2);
+  border-radius: var(--basis_x0_5);
+  background: var(--on-background);
+  color: var(--background);
+}
 
 a,
 a:visited {
