--- a/src/index.css
+++ b/src/index.css
@@ -184,6 +184,8 @@ ul {
 button,
 textarea,
 input[type="text"],
+input[type="email"],
+input[type="url"],
 select {
   min-width: 0px;
   outline: none;
@@ -192,21 +194,27 @@ select {
   font-size: var(--body-font-size);
 }
 textarea,
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+input[type="url"] {
   padding: var(--basis);
   background: var(--input-background);
   color: var(--on-background);
   box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background);
 }
 textarea.inverted,
-input[type="text"].inverted {
+input[type="text"].inverted,
+input[type="email"].inverted,
+input[type="url"].inverted {
   background: var(--on-background);
   color: var(--input-background);
   box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background);
 }
 
 textarea:focus,
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus {
   background: var(--input-background);
   color: var(--on-background);
   box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background-contrast);
