added placeholder to HtmlInput

--- a/src/components/HtmlInput.module.css
+++ b/src/components/HtmlInput.module.css
@@ -2,3 +2,11 @@
   white-space: pre-wrap;
   display: inline-block;
 }
+
+.rebuild_textarea.show_placeholder:before {
+  position: absolute;
+  content: attr(placeholder);
+  opacity: 0.5;
+  color: inherit;
+  cursor: text;
+}
