--- a/src/pages/App.module.css
+++ b/src/pages/App.module.css
@@ -11,3 +11,8 @@
   background: var(--background);
   color: var(--on-background);
 }
+@media (max-width: 1000px) {
+  .app {
+    padding: var(--basis_x2);
+  }
+}
