added classes to add the styles of headlines, normal text and buttons to input fields

--- a/src/index.css
+++ b/src/index.css
@@ -149,7 +149,8 @@ h1 {
   text-decoration: inherit;
 }
 
-h2 {
+h2,
+.type_h2 {
   font-size: calc(var(--font-add) + var(--basis_x2));
   margin: var(--basis_x4) 0 var(--basis) 0;
   text-decoration: inherit;
@@ -182,7 +183,8 @@ h3.red {
   color: var(--red);
 }
 
-p {
+p,
+.type_p {
   /* width: calc(var(--basis_x16) + var(--basis_x8)); */
   max-width: 100%;
   margin: var(--basis) 0;
@@ -216,11 +218,22 @@ input[type="text"],
 input[type="email"],
 input[type="url"],
 select,
-.wrapped_select {
+.wrapped_select,
+.type_button {
   min-width: 0px;
   outline: none;
   border: none;
   margin: var(--basis);
+}
+
+button,
+textarea,
+input[type="text"],
+input[type="email"],
+input[type="url"],
+select,
+.wrapped_select,
+.type_button {
   font-size: var(--body-font-size);
 }
 textarea,
@@ -262,7 +275,8 @@ div[contentEditable=true] {
 
 button,
 select,
-.wrapped_select {
+.wrapped_select,
+.type_button {
   font-weight: bold;
   transition: transform 0.2s ease;
   position: relative;
@@ -271,8 +285,11 @@ select,
 
   --button-background: var(--on-background);
   --button-color: var(--constant-button-color);
-  background: var(--button-background);
-  color: var(--button-color);
+  background: var(--button-background) !important;
+  color: var(--button-color) !important;
+}
+.type_button {
+  cursor: text;
 }
 
 select {
@@ -312,9 +329,10 @@ button.text {
   --button-background: transparent;
   --button-color: var(--on-background);
 }
-button:focus {
-  --button-background: var(--background-contrast);
-  --button-color: var(--on-background);
+button:focus,
+.type_button:focus {
+  --button-background: var(--background-contrast) !important;
+  --button-color: var(--on-background) !important;
 }
 button:hover{
   transform-origin: center center;
