--- a/src/index.css
+++ b/src/index.css
@@ -388,7 +388,10 @@ button.hasIcon .icon.big {
 
 button.hasIcon .icon.image {
   height: var(--basis_x16);
-  margin: calc(-1 * var(--basis)) calc(-2 * var(--basis));
+  margin-top: calc(-1 * var(--basis));
+  margin-right: calc(-2 * var(--basis));
+  margin-bottom: calc(-1 * var(--basis));
+  margin-left: calc(-2 * var(--basis));
 }
 
 hr {
