--- a/src/pages/Editor.module.css
+++ b/src/pages/Editor.module.css
@@ -5,3 +5,16 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+
+
+@media (min-width: 800px) {
+  .columns {
+    display: flex;
+    gap: var(--basis_x4);
+  }
+  .columns .column {
+    width: 50%;
+  }
+}
+
