--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,7 @@ ol {
 
 textarea,
 div[contentEditable=true],
-input[type="text"],
+input[type="text"]:not(#react-select-3-input),
 input[type="email"],
 input[type="url"] {
   appearance: none;
@@ -219,7 +219,7 @@ input[type="url"] {
 button,
 textarea,
 div[contentEditable=true],
-input[type="text"],
+input[type="text"]:not(#react-select-3-input),
 input[type="email"],
 input[type="url"],
 select,
@@ -233,7 +233,7 @@ select,
 
 button,
 textarea,
-input[type="text"],
+input[type="text"]:not(#react-select-3-input),
 input[type="email"],
 input[type="url"],
 select,
@@ -243,7 +243,7 @@ select,
 }
 textarea,
 div[contentEditable=true],
-input[type="text"],
+input[type="text"]:not(#react-select-3-input),
 input[type="email"],
 input[type="url"] {
   padding: var(--basis);
@@ -263,7 +263,7 @@ input[type="url"].inverted {
 
 textarea:focus,
 div[contentEditable=true]:focus,
-input[type="text"]:focus,
+input[type="text"]:not(#react-select-3-input):focus,
 input[type="email"]:focus,
 input[type="url"]:focus {
   background: var(--input-background);
