--- a/src/pages/Editor.module.css
+++ b/src/pages/Editor.module.css
@@ -5,3 +5,19 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+@media (min-width: 800px) {
+  .editor_form_row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: var(--basis_x8);
+  }
+  .editor_form_row > * {
+    flex: 1;
+  }
+  .editor_form_row > h3 {
+    max-width: 200px;
+    margin: 0;
+    margin-right: var(--basis_x2);
+  }
+}
