started a whole rewrite of the editor
(plus using the new blocks-API)

I don't know how to put this into smaller commits as this nearly a full rewrite and all of the code was or is interlinked.

--- a/src/components/HtmlInput.module.css
+++ b/src/components/HtmlInput.module.css
@@ -1,7 +1,7 @@
 .rebuild_textarea {
+  display: block;
   white-space: pre-wrap;
   word-break: break-word;
-  display: inline-block;
 }
 
 .rebuild_textarea.show_placeholder:before {
