--- a/src/components/Repeater.module.css
+++ b/src/components/Repeater.module.css
@@ -1,5 +1,4 @@
 .row {
-  margin-top: var(--basis);
   display: flex;
   flex-direction: column;
   position: relative;
@@ -57,6 +56,12 @@
 }
 .row .inlineRowButton:last-child {
   margin-right: 0;
+}
+
+.row .dragHandleButton {
+  padding: var(--basis);
+  line-height: 0;
+  margin-inline-end: var(--basis_x4);
 }
 
 .addRowButton{
