--- a/src/components/CoverphotoPicker.module.css
+++ b/src/components/CoverphotoPicker.module.css
@@ -1,13 +1,17 @@
 .coverphoto {
   position: relative;
-  display: block;
   width: 100%;
-  height: 20rem;
   background-color: var(--background-contrast);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: var(--basis_x4);
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+
+  height: 20rem;
 }
 @media (max-width: 1000px) {
   .coverphoto{
@@ -23,4 +27,11 @@
   .coverphoto{
     height: 7rem;
   }
+}
+
+.coverphoto.no_image {
+  height: auto;
+  background-color: transparent;
+
+  justify-content: center;
 }
