--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,8 @@ input[type="url"] {
   padding: var(--basis);
   background: var(--input-background);
   color: var(--on-background);
-  box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background);
+  --input-box-shadow: inset 0 0 0 var(--basis_x0_2) var(--on-background-contrast);
+  box-shadow: var(--input-box-shadow);
 }
 textarea.inverted,
 div[contentEditable=true].inverted,
@@ -264,7 +265,7 @@ input[type="email"].inverted,
 input[type="url"].inverted {
   background: var(--on-background);
   color: var(--input-background);
-  box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background);
+  --input-box-shadow: inset 0 0 0 var(--basis_x0_2) var(--on-background-contrast);
 }
 
 textarea:focus,
@@ -274,7 +275,7 @@ input[type="email"]:focus,
 input[type="url"]:focus {
   background: var(--input-background);
   color: var(--on-background);
-  box-shadow: inset 0 0 0 calc(0.2 * var(--basis)) var(--on-background-contrast);
+  --input-box-shadow: inset 0 0 0 var(--basis_x0_2) var(--on-background);
 }
 
 textarea,
@@ -527,4 +528,27 @@ img.emoji {
 
 div[contenteditable].hide_border{
   box-shadow: none;
+}
+@media (any-hover: hover) {
+  textarea.show_border_on_active,
+  div[contentEditable=true].show_border_on_active,
+  input[type="text"].show_border_on_active:not(#react-select-3-input),
+  input[type="email"].show_border_on_active,
+  input[type="url"].show_border_on_active {
+    box-shadow: none;
+  }
+  textarea.show_border_on_active:hover,
+  div[contentEditable=true].show_border_on_active:hover,
+  input[type="text"].show_border_on_active:hover:not(#react-select-3-input),
+  input[type="email"].show_border_on_active:hover,
+  input[type="url"].show_border_on_active:hover {
+    box-shadow: var(--input-box-shadow);
+  }
+  textarea.show_border_on_active:focus,
+  div[contentEditable=true].show_border_on_active:focus,
+  input[type="text"].show_border_on_active:focus:not(#react-select-3-input),
+  input[type="email"].show_border_on_active:focus,
+  input[type="url"].show_border_on_active:focus {
+    box-shadow: var(--input-box-shadow);
+  }
 }
