--- a/src/components/edit/CoverphotoPicker.module.css
+++ b/src/components/edit/CoverphotoPicker.module.css
@@ -39,6 +39,7 @@
 @media (any-hover: hover) {
   .changeCoverphotoButton {
     opacity: 0.1;
+    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
   }
   .coverphoto.no_image .changeCoverphotoButton,
   .coverphoto:hover .changeCoverphotoButton {
