--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,32 @@
 .basis_0_3 {
   --basis: 0.3rem;
 }
+
+:root {
+  --basis: 1rem;
+}
+@media (max-width: 1000px) {
+  :root,
+  .basis_x1 {
+    --basis: 0.8rem;
+  }
+}
+@media (max-width: 800px) {
+  :root,
+  .basis_x1,
+  .basis_0_8 {
+    --basis: 0.4rem;
+  }
+}
+@media (max-width: 500px) {
+  :root,
+  .basis_x1,
+  .basis_0_8,
+  .basis_0_4 {
+    --basis: 0.3rem;
+  }
+}
+
 :root,
 .basis_x1,
 .basis_0_8,
