--- a/src/components/edit/PropertiesEditor.module.css
+++ b/src/components/edit/PropertiesEditor.module.css
@@ -1,19 +1,13 @@
 .main_headline {
   width: calc(1000px + var(--basis_x8));
-  maxWidth: calc(100% - var(--basis_x8));
+  maxWidth: calc(100% - var(--basis));
   margin: var(--basis_x8) auto;
-}
-.main_headline .main_headline_input {
-  padding: var(--basis_x4);
 }
 @media (max-width: 1075px) {
   .main_headline {
     width: 100%;
-    maxWidth: calc(100% - var(--basis_x8));
+    maxWidth: calc(100% - var(--basis));
     margin: var(--basis_x8) auto;
-  }
-  .main_headline .main_headline_input {
-    padding: var(--basis_x2);
   }
 }
 
