--- a/src/components/edit/CoverphotoPicker.module.css
+++ b/src/components/edit/CoverphotoPicker.module.css
@@ -36,6 +36,7 @@
   justify-content: center;
 }
 
+/*
 @media (any-hover: hover) {
   .changeCoverphotoButton {
     opacity: 0.1;
@@ -46,3 +47,4 @@
     opacity: 1;
   }
 }
+*/
